--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,35 +1,33 @@
-name: Build and Run Docker Container
+name: Deploy React App
+
 on:
   push:
     branches:
       - main
 
 jobs:
-  build:
-    name: Build Docker Container
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest # Replace with the name of your self-hosted runner
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: false
-          tags: my-docker-image:latest
-      
-  run:
-    name: Run Docker Container
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Start Docker Container
-        uses: docker/compose-action@1.0.4
+          tags: nodejs:latest
+
+      - name: Deploy Docker container
+        uses: docker/metadata-action@v3
         with:
-          compose-file: docker-compose.yml
-          service: my-docker-service
-          detached: true
+          images: nodejs:latest
+        env:
+          DOCKER_HOST: tcp://localhost:8000 # Replace with the address of your Docker host
+
+      - name: Deploy to production
+        run: |
+            docker ps
+            docker rm $CONTAINER_NAME
+            docker run -d -p 8000:8000 --name $CONTAINER_NAME nodejs:latest
